--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <body>
 
   <!-- Rating state start -->
-  <div class="container">
+  <div class="container primeiro_banner">
     <section class="container__icon-star"><img src="./images/icon-star.svg" alt="icon-star"></section>
     <div class="container__conteudo">
       <h1 class="container__title">How did we do?</h1>
@@ -38,25 +38,28 @@
     </div>
 
     <div class="container__buttons">
-      <button class="button-number" onclick="active()">1</button>
-      <button class="button-number" onclick="active()">2</button>
-      <button class="button-number" onclick="active()">3</button>
-      <button class="button-number" onclick="active()">4</button>
-      <button class="button-number" onclick="active()">5</button>
+      <button class="button-number" onclick="active()" id="button-1">1</button>
+      <button class="button-number" onclick="active()" id="button-2">2</button>
+      <button class="button-number" onclick="active()" id="button-3">3</button>
+      <button class="button-number" onclick="active()" id="button-4">4</button>
+      <button class="button-number" onclick="active()" id="button-5">5</button>
     </div>
 
-    <button class="button-submit" onclick="handleSubmit()">Submit</button>
+    <button class="button-submit" onclick="handleSubmit()" id="button-submit">Submit</button>
 
-    <!-- Rating state end -->
+    
+  </div>
 
-    <!-- Thank you state start -->
+  <div class="container">
+    <img src="./images/illustration-thank-you.svg" alt="illustration-thank-you" class="illustration-thank-you">
 
-    <!-- <button>You selected Add rating here out of 5</button> -->
+    <button class="button-selected" id="selected-rating">You selected Add rating here out of 5</button> 
 
-    <!-- Thank you!
+    <h1 class="thank-you-title">Thank you!</h1>
 
-    We appreciate you taking the time to give a rating. If you ever need more support,
-    don’t hesitate to get in touch! -->
+    <p class="thank-you-text">We appreciate you taking the time to give a rating. If you ever need more support,
+    don’t hesitate to get in touch!</p>
+
   </div>
 
   <!-- Thank you state end -->
